<?xml version="1.0"?>
<package>
  <name>pp_feedback</name>
  <version>0.0.0</version>
  <description>Implements feedback controllers</description>
  <maintainer email="r2dempst@watonomous.ca">Rowan Dempster</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pp_common</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pp_common</run_depend>
  <run_depend>tf</run_depend>

</package>
