<?xml version="1.0"?>
<package>
  <name>common_msgs</name>
  <version>0.0.0</version>
  <description>ROS messages used by multiple subteams.</description>

  <maintainer email="r2dempst@uwaterloo.ca">Rowan Dempster</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
