<?xml version="1.0"?>
<package>
  <name>embedded_msgs</name>
  <version>0.0.0</version>
  <description>The embedded_msgs package</description>

  <maintainer email="alitoyserkani@todo.todo">alitoyserkani</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
