<?xml version="1.0"?>
<package>
  <name>path_planning_msgs</name>
  <version>0.0.0</version>
  <description>The motion planning messages package - path planning and velocity planning happen here.</description>

  <maintainer email="r2dempst@watonomous.ca">Rowan Dempster</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>autoware_lanelet2_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>common_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>autoware_lanelet2_msgs</run_depend>
  <run_depend>geographic_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
