<?xml version="1.0"?>
<package>
  <name>wato_topics</name>
  <version>0.0.0</version>
  <description>WATO Topics</description>

  <maintainer email="h397wang@uwaterloo.ca">Henry Wang</maintainer>

  <license>WATO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
